test/subjects/invalid/illegal_offset_type.php
<?php

	// TODO also check arrays

	class A
	{
	}

	// check for error
	$x = array (new A () => 5);

?>
